<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
        >
    <ImageView
            android:src="@drawable/background_portrait"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            />
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="0dp"
            android:orientation="vertical" android:layout_margin="10dip">

        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/play"
                style="@style/MenuButtonRight"
                android:onClick="onPlayClicked"
                />
        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_play"
                style="@style/MenuButtonRight"
                android:onClick="onFreePlayClicked"
                />
        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/vs_ai"
                style="@style/MenuButtonRight"
                android:onClick="onChallengePlayClicked"
                />
        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/high_scores"
                style="@style/MenuButtonCenter"
                android:onClick="onHighScoresClicked"
                />

    </LinearLayout>
</RelativeLayout>
