<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="5dip"
        >
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:background="@drawable/board"
                  android:layout_margin="5dip"
            >
        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/caption_ai_win"
                style="@style/CaptionText"
                android:id="@+id/winText"
                />

    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_option_replay"
                style="@style/MenuButtonCenter"
                android:layout_weight="1"
                android:id="@+id/replayAction"
                android:onClick="onReplayPressed"
                />
        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_cancel"
                style="@style/MenuButtonCenter"
                android:layout_weight="1"
                android:id="@+id/cancelAction"
                />

    </LinearLayout>
</LinearLayout>