<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
        >
    <ImageView
            android:src="@drawable/background_portrait"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            />
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="0dp"
            android:orientation="vertical"
            android:layout_margin="10dip"
            >

        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sequence_binary"
                android:id="@+id/button"
                style="@style/MenuButtonRight"
                android:onClick="onBinarySelectionClick"
                />
        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sequence_fibonacci"
                android:id="@+id/button2"
                style="@style/MenuButtonRight"
                android:onClick="onFibonacciSelectionClick"
                />
        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sequence_prime"
                android:id="@+id/button3"
                style="@style/MenuButtonRight"
                android:onClick="onPrimeSelectionClick"
                />


    </LinearLayout>
</RelativeLayout>
