<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@drawable/board"
              android:layout_margin="10dip"
        >
    <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/caption_custom_difficulty"
            style="@style/CaptionText"
            />
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5sp"
            >
        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextRight"
                android:text="@string/caption_min"
                android:layout_weight="0.5"/>

        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.MinimumSeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:id="@+id/minimumValue"
                />
        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextRight"
                android:text="1"
                android:id="@+id/minimumValueDisplay"
                android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10sp"
            >
        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextRight"
                android:text="@string/caption_max"
                android:layout_weight="0.5"/>
        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.MinimumSeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:id="@+id/maximumValue"
                />
        <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextRight"
                android:text="1"
                android:id="@+id/maximumValueDisplay"
                android:layout_weight="1"/>

    </LinearLayout>
    <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_difficulty_custom"
            android:id="@+id/submitAction"
            style="@style/MenuButtonRight"
            />
</LinearLayout>