<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
        >
    <ImageView
            android:src="@drawable/background_portrait"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            />
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:orientation="vertical"
            android:layout_margin="10dip"
            >
        <LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="5dip"
                >
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:background="@drawable/board"
                          android:layout_margin="5dip"
                    >
                <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/caption_user_lost"
                        style="@style/CaptionText"
                        android:id="@+id/winText"
                        />

            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/action_option_replay"
                        style="@style/MenuButtonCenter"
                        android:layout_weight="1"
                        android:id="@+id/replayAction"
                        android:onClick="onReplayPressed"
                        />
                <au.edu.jcu.mobile_technology.scott.alexander.assignment.view.PaintedTextButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/action_cancel"
                        style="@style/MenuButtonCenter"
                        android:layout_weight="1"
                        android:id="@+id/cancelAction"
                        android:onClick="onCancelPressed"
                        />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
